--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TA04</title>
-    <link rel="stylesheet" href="last.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <header class="header">
@@ -58,6 +58,6 @@
     
     
 
-    <script src="last.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
