--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TA04</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="last.css">
 </head>
 
 <body>
@@ -12,27 +12,27 @@
         <img src="bo6.png" alt="Logo Black Ops" class="logo" id="logo-bo6">
         <nav class="navbar">
             <a href="#">Inicio</a>
+            <a href="#">Listado</a>
             <a href="#">Proyecto 1</a>
             <a href="#">Proyecto 2</a>
-            <a href="#">Proyecto 3</a>
         </nav>
     </header>
 
     <main class="main-content">
         <div class="project-title" id="project-title">Proyecto 1: Adrian</div>
-        <div class="project-description" id="project-description">Descripción inicial del proyecto.</div>
+        <div class="project-description" id="project-description">Este proyecto consiste en el diseño, construcción y programación de un brazo robótico. 
+            El proceso incluye modelado 3D, impresión de piezas, programación de Arduino y el desarrollo de una app de control, utilizando herramientas como TinkerCad, AppInventor y ArduinoIDE.</div>
     </main>
 
-    <!-- Sección de la presentación -->
     <div class="presentation-section">
         <div class="presentation-container">
             <iframe loading="lazy" src="https://www.canva.com/design/DAGDH4TraQI/NLRWY50acZguUqEKjSB2bA/view?embed" allowfullscreen></iframe>
         </div>
     </div>
 
-    <!-- Sección de contacto -->
+
     <section class="contact-section" id="contact">
-        <h2>Contáctanos</h2>
+        <h2>Contacta</h2>
         <form class="contact-form">
             <label for="name">Nombre:</label>
             <input type="text" id="name" name="name" placeholder="Tu nombre" required>
@@ -47,7 +47,6 @@
         </form>
     </section>
 
-    <!-- Robot -->
     <div class="robot" id="robot">
         <div class="robot-head">
             <div class="robot-eye left-eye"></div>
@@ -56,6 +55,6 @@
         <div class="robot-body"></div>
     </div>
 
-    <script src="index.js"></script>
+    <script src="last.js"></script>
 </body>
 </html>
